// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/integrations/InstalledOAuthApps should match snapshot 1`] = `
<OAuthAppsList
  appsOAuthAppIDs={Array []}
  canManageOauth={true}
  loading={true}
  oauthApps={
    Array [
      Object {
        "callback_urls": Array [
          "https://test.com/callback",
        ],
        "client_secret": "88cxd9wpzpbpfp8pad78xj75pr",
        "create_at": 1501365458934,
        "creator_id": "88oybd1dwfdoxpkpw1h5kpbyco",
        "description": "testing",
        "homepage": "https://test.com",
        "icon_url": "https://test.com/icon",
        "id": "facxd9wpzpbpfp8pad78xj75pr",
        "is_trusted": false,
        "name": "firstApp",
        "update_at": 1501365458934,
      },
      Object {
        "callback_urls": Array [
          "https://test2.com/callback",
          "https://test2.com/callback2",
        ],
        "client_secret": "decxd9wpzpbpfp8pad78xj75pr",
        "create_at": 1501365459984,
        "creator_id": "88oybd2dwfdoxpkpw1h5kpbyco",
        "description": "testing2",
        "homepage": "https://test2.com",
        "icon_url": "https://test2.com/icon",
        "id": "fzcxd9wpzpbpfp8pad78xj75pr",
        "is_trusted": true,
        "name": "secondApp",
        "update_at": 1501365479988,
      },
    ]
  }
  onDelete={[Function]}
  onRegenSecret={[Function]}
  team={
    Object {
      "allow_open_invite": false,
      "allowed_domains": "",
      "company_name": "",
      "create_at": 0,
      "delete_at": 0,
      "description": "",
      "display_name": "name",
      "email": "",
      "group_constrained": false,
      "id": "team_id",
      "invite_id": "",
      "name": "test",
      "scheme_id": "id",
      "type": "O",
      "update_at": 0,
    }
  }
  users={
    Object {
      "88oybd1dwfdoxpkpw1h5kpbyco": Object {
        "auth_service": "",
        "bot_description": "",
        "create_at": 0,
        "delete_at": 0,
        "email": "",
        "first_name": "",
        "id": "88oybd1dwfdoxpkpw1h5kpbyco",
        "is_bot": false,
        "last_activity_at": 0,
        "last_name": "",
        "last_password_update": 0,
        "last_picture_update": 0,
        "locale": "",
        "mfa_active": false,
        "nickname": "",
        "notify_props": Object {
          "calls_desktop_sound": "true",
          "channel": "false",
          "comments": "never",
          "desktop": "default",
          "desktop_sound": "false",
          "email": "false",
          "first_name": "false",
          "highlight_keys": "",
          "mark_unread": "mention",
          "mention_keys": "",
          "push": "none",
          "push_status": "offline",
        },
        "password": "",
        "position": "",
        "props": Object {},
        "roles": "",
        "terms_of_service_create_at": 0,
        "terms_of_service_id": "",
        "update_at": 0,
        "username": "user1",
      },
      "88oybd2dwfdoxpkpw1h5kpbyco": Object {
        "auth_service": "",
        "bot_description": "",
        "create_at": 0,
        "delete_at": 0,
        "email": "",
        "first_name": "",
        "id": "88oybd2dwfdoxpkpw1h5kpbyco",
        "is_bot": false,
        "last_activity_at": 0,
        "last_name": "",
        "last_password_update": 0,
        "last_picture_update": 0,
        "locale": "",
        "mfa_active": false,
        "nickname": "",
        "notify_props": Object {
          "calls_desktop_sound": "true",
          "channel": "false",
          "comments": "never",
          "desktop": "default",
          "desktop_sound": "false",
          "email": "false",
          "first_name": "false",
          "highlight_keys": "",
          "mark_unread": "mention",
          "mention_keys": "",
          "push": "none",
          "push_status": "offline",
        },
        "password": "",
        "position": "",
        "props": Object {},
        "roles": "",
        "terms_of_service_create_at": 0,
        "terms_of_service_id": "",
        "update_at": 0,
        "username": "user2",
      },
    }
  }
/>
`;

exports[`components/integrations/InstalledOAuthApps should match snapshot for Apps 1`] = `
<OAuthAppsList
  appsOAuthAppIDs={
    Array [
      "fzcxd9wpzpbpfp8pad78xj75pr",
    ]
  }
  canManageOauth={true}
  loading={true}
  oauthApps={
    Array [
      Object {
        "callback_urls": Array [
          "https://test.com/callback",
        ],
        "client_secret": "88cxd9wpzpbpfp8pad78xj75pr",
        "create_at": 1501365458934,
        "creator_id": "88oybd1dwfdoxpkpw1h5kpbyco",
        "description": "testing",
        "homepage": "https://test.com",
        "icon_url": "https://test.com/icon",
        "id": "facxd9wpzpbpfp8pad78xj75pr",
        "is_trusted": false,
        "name": "firstApp",
        "update_at": 1501365458934,
      },
      Object {
        "callback_urls": Array [
          "https://test2.com/callback",
          "https://test2.com/callback2",
        ],
        "client_secret": "decxd9wpzpbpfp8pad78xj75pr",
        "create_at": 1501365459984,
        "creator_id": "88oybd2dwfdoxpkpw1h5kpbyco",
        "description": "testing2",
        "homepage": "https://test2.com",
        "icon_url": "https://test2.com/icon",
        "id": "fzcxd9wpzpbpfp8pad78xj75pr",
        "is_trusted": true,
        "name": "secondApp",
        "update_at": 1501365479988,
      },
    ]
  }
  onDelete={[Function]}
  onRegenSecret={[Function]}
  team={
    Object {
      "allow_open_invite": false,
      "allowed_domains": "",
      "company_name": "",
      "create_at": 0,
      "delete_at": 0,
      "description": "",
      "display_name": "name",
      "email": "",
      "group_constrained": false,
      "id": "team_id",
      "invite_id": "",
      "name": "test",
      "scheme_id": "id",
      "type": "O",
      "update_at": 0,
    }
  }
  users={
    Object {
      "88oybd1dwfdoxpkpw1h5kpbyco": Object {
        "auth_service": "",
        "bot_description": "",
        "create_at": 0,
        "delete_at": 0,
        "email": "",
        "first_name": "",
        "id": "88oybd1dwfdoxpkpw1h5kpbyco",
        "is_bot": false,
        "last_activity_at": 0,
        "last_name": "",
        "last_password_update": 0,
        "last_picture_update": 0,
        "locale": "",
        "mfa_active": false,
        "nickname": "",
        "notify_props": Object {
          "calls_desktop_sound": "true",
          "channel": "false",
          "comments": "never",
          "desktop": "default",
          "desktop_sound": "false",
          "email": "false",
          "first_name": "false",
          "highlight_keys": "",
          "mark_unread": "mention",
          "mention_keys": "",
          "push": "none",
          "push_status": "offline",
        },
        "password": "",
        "position": "",
        "props": Object {},
        "roles": "",
        "terms_of_service_create_at": 0,
        "terms_of_service_id": "",
        "update_at": 0,
        "username": "user1",
      },
      "88oybd2dwfdoxpkpw1h5kpbyco": Object {
        "auth_service": "",
        "bot_description": "",
        "create_at": 0,
        "delete_at": 0,
        "email": "",
        "first_name": "",
        "id": "88oybd2dwfdoxpkpw1h5kpbyco",
        "is_bot": false,
        "last_activity_at": 0,
        "last_name": "",
        "last_password_update": 0,
        "last_picture_update": 0,
        "locale": "",
        "mfa_active": false,
        "nickname": "",
        "notify_props": Object {
          "calls_desktop_sound": "true",
          "channel": "false",
          "comments": "never",
          "desktop": "default",
          "desktop_sound": "false",
          "email": "false",
          "first_name": "false",
          "highlight_keys": "",
          "mark_unread": "mention",
          "mention_keys": "",
          "push": "none",
          "push_status": "offline",
        },
        "password": "",
        "position": "",
        "props": Object {},
        "roles": "",
        "terms_of_service_create_at": 0,
        "terms_of_service_id": "",
        "update_at": 0,
        "username": "user2",
      },
    }
  }
/>
`;
